--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,7 +50,7 @@ jobs:
           cache-to: type=registry,ref=${{ env.CACHE_REPO }}:cache,mode=max
 
       - name: Run CVE scan with Trivy
-        uses: aquasecurity/trivy-action@v0.17.0
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.IMAGE_NAME }}:latest
           format: table
